Removed logo off the item shop and changed the more options names

--- a/public/itemShop/index.html
+++ b/public/itemShop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +44,8 @@
             transition: background-color 0.3s ease;
         }
 
-        ul li a:hover, ul li.active a {
+        ul li a:hover,
+        ul li.active a {
             background-color: #555;
         }
 
@@ -82,10 +84,8 @@
         }
     </style>
 </head>
+
 <body>
-    <div>
-        <img src="moneySign.png" alt="Logo">
-    </div>
 
     <ul>
         <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
@@ -99,8 +99,8 @@
         <li><a href="#"><i class="fa fa-caret-down"></i> More Options: <i class="fa fa-caret-down"></i></a>
             <div class="sub-menu">
                 <ul>
-                    <li><a href="#">Cookies</a></li>
-                    <li><a href="#">Sandwich</a></li>
+                    <li><a href="#">????</a></li>
+                    <li><a href="#">????</a></li>
                 </ul>
             </div>
         </li>
@@ -110,4 +110,5 @@
         <h1>Snake Item Shop</h1>
     </div>
 </body>
+
 </html>
