--- a/public/shop.html
+++ b/public/shop.html
@@ -88,7 +88,7 @@
 <body>
 
     <ul>
-        <li class="active"><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="#">Bronze Coin</a></li>
         <li><a href="#">Silver Coin</a></li>
         <li><a href="#">Gold Coin</a></li>
